<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterUser">

    <TextView
        android:text="@string/login_title"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_pseudo_log">

        <EditText
            android:id="@+id/et_pseudo"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pseudo" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_password_log">
        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lock_unlock_forme"
        android:shadowColor="#A8A8A8"/>

    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>